--- a/projects/page-builder/src/lib/toolbar/toolbar.component.html
+++ b/projects/page-builder/src/lib/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <button
   (click)="toggleOutlines()"
   title="Toggle outlines"
-  [class.active]="pageBuilderService.showOutlines"
+  [class.active]="pageBuilder.showOutlines"
 >
   <svg Icon="assets/icons/outlines.svg"></svg>
 </button>
@@ -24,13 +24,13 @@
   </button>
   <input
     [min]="1"
-    [max]="pageBuilderService.pageInfo.pages.length"
+    [max]="pageBuilder.pageInfo.pages.length"
     type="number"
     [(ngModel)]="pageNumber"
     (change)="changePage()"
   />
   <span>/</span>
-  <span>{{ pageBuilderService.pageInfo.pages.length }}</span>
+  <span>{{ pageBuilder.pageInfo.pages.length }}</span>
   <button (click)="nextPage()" title="Next page">
     <svg Icon="assets/icons/chevron-right.svg"></svg>
   </button>
