--- a/projects/page-builder/src/lib/page-builder.scss
+++ b/projects/page-builder/src/lib/page-builder.scss
@@ -14,6 +14,8 @@
   border: none var(--tools-border);
   background-color: var(--side-config-bg);
   color: var(--side-config-fg);
+  font-family: sans-serif;
+  font-size: 12px;
   svg {
     fill: var(--side-config-fg);
   }
