--- a/projects/page-builder/src/lib/toolbar/toolbar.component.scss
+++ b/projects/page-builder/src/lib/toolbar/toolbar.component.scss
@@ -42,6 +42,8 @@
   gap: 5px;
   margin: 0 10px;
   align-items: center;
+  font-family: sans-serif;
+  font-size: 16px;
   input {
     border: none;
     background: none;
@@ -50,6 +52,7 @@
     border-radius: 4px;
     max-width: 100px;
     text-align: center;
+    font: inherit;
   }
   svg {
     max-height: 100%;
