--- a/projects/page-builder/src/lib/page-preview/page-preview.component.html
+++ b/projects/page-builder/src/lib/page-preview/page-preview.component.html
@@ -2,4 +2,5 @@
   class="ngx-page-builder paper {{ data?.config?.size }} {{ data?.config?.orientation }}"
   [class.is-print-page]="isPrintPage"
   #paper
+  [attr.dir]="data?.config?.direction"
 ></div>
