--- a/projects/page-builder/src/lib/toolbar/toolbar.component.html
+++ b/projects/page-builder/src/lib/toolbar/toolbar.component.html
@@ -41,7 +41,9 @@
 <!-- --------------------------------------------------------------------------------- -->
 <div class="spacer"></div>
 <!-- --------------------------------------------------------------------------------- -->
-
+<button (click)="exportHtml()" title="exportHtml">
+  <svg Icon="assets/icons/export.svg"></svg>
+</button>
 <button (click)="openConfigDialog()" title="Configuration">
   <svg Icon="assets/icons/cog.svg"></svg>
 </button>
