fix change export all pages as html

--- a/projects/page-builder/src/lib/toolbar/toolbar.component.html
+++ b/projects/page-builder/src/lib/toolbar/toolbar.component.html
@@ -41,8 +41,8 @@
 <!-- --------------------------------------------------------------------------------- -->
 <div class="spacer"></div>
 <!-- --------------------------------------------------------------------------------- -->
-<button (click)="exportHtml()" title="exportHtml">
-  <svg Icon="assets/icons/export.svg"></svg>
+<button (click)="exportHtml()" title="export all pages as Html">
+  <svg Icon="assets/icons/file-export.svg"></svg>
 </button>
 <button (click)="openConfigDialog()" title="Configuration">
   <svg Icon="assets/icons/cog.svg"></svg>
