--- a/projects/page-builder/src/lib/toolbar/toolbar.component.html
+++ b/projects/page-builder/src/lib/toolbar/toolbar.component.html
@@ -41,8 +41,11 @@
 <!-- --------------------------------------------------------------------------------- -->
 <div class="spacer"></div>
 <!-- --------------------------------------------------------------------------------- -->
-<button (click)="exportHtml()" title="export all pages as Html">
+<button (click)="exportHtml()" title="Export all pages as Html">
   <svg Icon="assets/icons/file-export.svg"></svg>
+</button>
+<button (click)="importHtml()" title="Import Html">
+  <svg Icon="assets/icons/download.svg"></svg>
 </button>
 <button (click)="openConfigDialog()" title="Configuration">
   <svg Icon="assets/icons/cog.svg"></svg>
