--- a/projects/page-builder/src/lib/import-dialog/import-dialog.component.html
+++ b/projects/page-builder/src/lib/import-dialog/import-dialog.component.html
@@ -17,6 +17,16 @@
       <label>Query Selector:</label>
       <input type="text" [(ngModel)]="querySelectorInput" placeholder=".main-content" />
     </div>
+    <div class="form-group">
+      <label>
+        <input type="checkbox" [(ngModel)]="importOptions.useSpaRenderer" />Spa renderer</label
+      >
+    </div>
+    <div class="form-group">
+      <label>
+        <input type="checkbox" [(ngModel)]="importOptions.useCorsProxy" />Use public proxies</label
+      >
+    </div>
     <button (click)="importFromUrl(resultSection)" [disabled]="loading">Import from URL</button>
   </section>
 
