fix bug export context in importer html

--- a/projects/page-builder/src/sources/page-break/page-break.component.scss
+++ b/projects/page-builder/src/sources/page-break/page-break.component.scss
@@ -2,7 +2,8 @@
   .page-break {
     height: 20px;
     background: #f6f6f6;
-    margin: 0px -20px;
+    margin: 2px -100%;
+    // margin: 0px -20px;
     box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.26);
     position: relative;
     &:after,
