--- a/projects/page-builder/src/styles/paper.scss
+++ b/projects/page-builder/src/styles/paper.scss
@@ -71,6 +71,9 @@
     max-width: 100%;
     max-height: 100%;
   }
+  * {
+    box-sizing: border-box;
+  }
 }
 .paper-inner {
   min-height: inherit;
